--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@
         function Header({ onAdminClick }) {
             return (
                 <header>
-                    <div className="header-top">
+                    <header className="header-top">
                         <div className="container">
                             <div className="contact-info">
                                 <div className="contact-item">
@@ -1128,20 +1128,10 @@
                                     <span>⏰</span>
                                     <span>Mon-Fri: 8am-5pm | Sat: 8am-3pm</span>
                                 </div>
-                            </div>
-                            <div className="social-links">
-                                <a href="https://www.tiktok.com" target="_blank" className="social-link" title="TikTok">
-                                    <span>📱</span>
-                                </a>
-                                <a href="https://www.facebook.com" target="_blank" className="social-link" title="Facebook">
-                                    <span>👥</span>
-                                </a>
-                                <a href="https://www.instagram.com" target="_blank" className="social-link" title="Instagram">
-                                    <span>📸</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                                </div>
+                                </div>
+                                </header>
+
                     <div className="header-main">
                         <div className="container">
                             <div className="header-content">
